# stars

./: README.md
stars-c/: .gitignore  CMakeLists.txt
stars-c/src/: main.c
stars-cpp/: CMakeLists.txt
stars-cpp/src/: main.cpp
stars-go/: .gitignore  go.mod  main.go
stars-hs/: .gitignore  CHANGELOG.md  package.yaml  stack.yaml  stars-hs.cabal
stars-hs-fast/: stars-hs.cabal
stars-hs-fast/app/: Main.hs
stars-hs/app/: Main.hs
stars-lisp/: main.lisp  stars.asd
stars-rs/: Cargo.toml
stars-rs/src/: main.rs
stars-zig/: build.zig  build.zig.zon
stars-zig/src/: main.zig
